--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -28,18 +28,18 @@ dependencies:
   # multi_image_picker: ^4.8.0
   permission_handler: ^9.2.0
   firebase_storage: ^10.2.18
-  time_range_picker: ^2.1.0
-  cached_network_image: ^3.2.1
+  cached_network_image: ^3.2.0
   date_picker_timeline: ^1.2.3
+  time_range_picker: ^2.1.0
   intl: ^0.17.0
   firebase_auth: ^3.3.20
-  firebase_messaging: ^11.4.2
-  flutter_local_notifications: ^9.6.1
+  firebase_messaging: ^11.2.12
+  flutter_local_notifications: ^9.4.0
   http: ^0.13.1
-  # date_range_picker: ^1.0.7
+  date_range_picker: ^1.0.7
   flutter_svg: ^0.22.0
   flutter_quill: ^4.1.1
-  # swipedetector: ^1.2.0
+  swipedetector: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -68,22 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/dr.png
-    - assets/icons/teeth.svg
-    - assets/icons/gallery.svg
-    - assets/icons/appoin.svg
-    - assets/icons/doct.svg
-    - assets/icons/sch.svg
-    - assets/icons/chat.svg
-    - assets/icons/banner.svg
-    - assets/icons/booking.svg
-    - assets/icons/group.svg
-    - assets/icons/timing.svg
-    - assets/icons/bell.svg
-    - assets/icons/error.svg
-    - assets/icons/nodata.svg
-    - assets/icons/docblog.svg
-    - assets/icons/type.svg
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
