--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^3.1.18
-  fluttertoast: ^8.0.9
+  fluttertoast: ^8.0.7
   # multi_image_picker: ^4.8.0
   permission_handler: ^9.2.0
   firebase_storage: ^10.2.18
@@ -69,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
